--- a/.gitignore
+++ b/.gitignore
@@ -52,3 +52,31 @@ CodeCoverage/
 *.VisualState.xml
 TestResult.xml
 nunit-*.xml
+
+# Visual Studio
+.vs/
+bin/
+obj/
+*.user
+*.suo
+*.sdf
+*.opensdf
+*.vcxproj.user
+
+# Build results
+[Dd]ebug/
+[Rr]elease/
+x64/
+x86/
+build/
+bld/
+[Bb]in/
+[Oo]bj/
+
+# Node modules
+node_modules/
+
+# Database
+*.db
+*.db-shm
+*.db-wal
